1.2beta2 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #009248: SQLite driver throws wierd exception.


1.2beta1 - Tuesday 24 October 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8340: Column names are not escaped.
- Fixed bug #8489: Show the absolute path in the "cannot find definition file"
  exception message.
- Fixed bug #8511: @access private for the 'id generator' classes.
- Fixed bug #8663: Undeclared property "type" used instead of "propertyType"
  in ezcPersistentObjectProperty.  This property is not used until now. And
  causes no change in the usage of the system.
- Fixed bug #9059: Incorrect prototype of ezcPersistentSession->__construct().
- Fixed bug #9187: ezcPersistentObjectDefition->__construct() has orphan
  parameters.
- Fixed bug #9189: ezcPersistentObjectProperty->__set_state() does not work
  correcty.
- Implemented suggestion #8526: Allow retrieving of the database handler and
  definition manager through the database and definitionManager properties of
  the ezcPersistentObjectSession class to help with transaction support.
- Implemented suggestion #8595: Added the ezcPersistentMultiManager class that
  serves as a singleton mechanism for ezcPersistentSession.	
- Implemented suggestion #8664: ezcPersistentSession: Cast values and skip
  undefined properties. Patch by Joel Arvidsson.
- Added support for several definition managers through
  ezcPersistentMultiManager.
- Added the method ezcPersistentFindIterator::flush method that flushes the
  rest of the resultset from an iterator. This method must be called if you
  decide not to loop over the complete resultset of an iterator.
- Deprecated the constructor parameters $key and $incrementKey to
  ezcPersistentObjectDefinition.


1.1 - Monday 12 June 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed small CS issues.

