@@ -12,14 +12,8 @@
  * Generates IDs based on the PDO::lastInsertId method.
  *
  * It is recommended to use auto_increment id columns for databases supporting
- * it. This includes MySQL and SQLite. Other databases need to create a sequence
- * per table.
- *
- * auto_increment databases:
- * <code>
- *  CREATE TABLE test
- *  ( id integer unsigned not null auto_increment, PRIMARY KEY (id ));
- * </code>
+ * it. This includes MySQL and SQLite. Use {@link ezcPersistentNativeGenerator}
+ * for those!
  *
  * For none auto_increment databases:
  * <code>
@@ -32,11 +26,16 @@
  *              supporting auto_increment.
  *
  * @package PersistentObject
+ *
+ * @apichange The usage of this generator for MySQL is deprecated. Use
+ *            {@link ezcPersistentNativeGenerator} instead.
  */
 class ezcPersistentSequenceGenerator extends ezcPersistentIdentifierGenerator
 {
     /**
      * Fetches the next sequence value for PostgreSQL and Oracle implementations.
+     * Fetches the next sequence value for PostgreSQL and Oracle implementations.
+     * Dispatches to {@link ezcPersistentNativeGenerator} for MySQL.
      *
      * @param ezcPersistentObjectDefinition $def
      * @param ezcDbHandler $db
@@ -45,6 +44,11 @@ class ezcPersistentSequenceGenerator extends ezcPersistentIdentifierGenerator
      */
     public function preSave( ezcPersistentObjectDefinition $def, ezcDbHandler $db, ezcQueryInsert $q )
     {
+        if ( $db->getName() == "mysql" )
+        {
+            $native = new ezcPersistentNativeGenerator();
+            return $native->preSave( $def, $db, $q );
+        }
         if ( ( $db->getName() == 'pgsql' || $db->getName() == 'oracle' ) &&
             array_key_exists( 'sequence', $def->idProperty->generator->params ) )
         {
@@ -55,8 +59,8 @@ class ezcPersistentSequenceGenerator extends ezcPersistentIdentifierGenerator
 
     /**
      * Returns the integer value of the generated identifier for the new object.
-     *
      * Called right after execution of the insert query.
+     * Dispatches to {@link ezcPersistentNativeGenerator} for MySQL.
      *
      * @param ezcPersistentObjectDefinition $def
      * @param ezcDbHandler $db
@@ -64,6 +68,11 @@ class ezcPersistentSequenceGenerator extends ezcPersistentIdentifierGenerator
      */
     public function postSave( ezcPersistentObjectDefinition $def, ezcDbHandler $db )
     {
+        if ( $db->getName() == "mysql" || $db->getName() == "sqlite" )
+        {
+            $native = new ezcPersistentNativeGenerator();
+            return $native->postSave( $def, $db );
+        }
         $id = null;
         if ( array_key_exists( 'sequence', $def->idProperty->generator->params ) &&
             $def->idProperty->generator->params['sequence'] !== null )
